Mon Sep 23 00:06:36 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/replacements.h.in:
	- Include stdarg.h in replacements.h so we don't choke on the
	  vasprintf() prototype.
	* src/tds/convert.c:
	- Include replacements.h from convert.c.  Fix inclusion of config.h.

Sun Sep 22 23:31:25 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/.cvsignore:
	- Ignore generated replacements.h

Sun Sep 22 23:28:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/replacements/Makefile.am src/tds/convert.c
	  include/replacements.h.in (added) src/replacements/atoll.c (added)
	  include/replacements.h (removed)
	- Migrate replacement atoll() to replacements convenience library.

Sun Sep 22 22:50:14 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/Makefile.am:
	- Include replacement function source files in distribution.

Sun Sep 22 22:44:54 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/convert.c:
	- Check specifically for the existence of a "long long" type when
	  deciding whether to use "%ll" output format, instead of
	  relying on HAVE_ATOLL to guess.

Sun Sep 22 22:07:52 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/Makefile.am src/ctlib/Makefile.am
	  src/dblib/Makefile.am src/dblib/dblib.c src/odbc/Makefile.am
	  src/odbc/odbc.c src/tds/Makefile.am src/tds/config.c
	  include/replacements.h (added)
	  src/replacements/.cvsignore (added)
	  src/replacements/Makefile.am (added)
	  src/replacements/asprintf.c (added)
	  src/replacements/vasprintf.c (added)
	  src/tds/asprintf.c (removed):
	- Migrate asprintf() and vasprintf() replacement functions to a
	  libtool convenience library.  Use AC_REPLACE_FUNCS() autoconf
	  macro to test for them.  Add and use a header replacements.h
	  with replacement prototypes.

Sun Sep 22 17:52:40 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/config.c:
	- Print correct location of found configuration file in
	  tds_try_conf_file().
